INCLUDES = -I$(top_srcdir)/src
SUBDIRS = src media

bin_SCRIPTS = ember
dist_bin_SCRIPTS = ember

confdir = $(sysconfdir)/ember/
dist_conf_DATA = ember.conf configfile


appdir = $(datadir)/applications
dist_app_DATA = ember.desktop

icondir = $(datadir)/icons/worldforge
dist_icon_DATA = ember.png

docdir = $(datadir)/doc/ember-$(VERSION)
dist_doc_DATA = README COPYING AUTHORS NEWS


